correction de la fonction scanQr
